fix work links on mobile

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1777,12 +1777,18 @@ code {
       transition: all 0.3s ease-out; }
     .page-work .recent-work-list__img-wrapper:hover:before {
       background: rgba(0, 0, 0, 0.99); }
+      @media (max-width: 50rem) {
+        .page-work .recent-work-list__img-wrapper:hover:before {
+          display: none; } }
     .page-work .recent-work-list__img-wrapper:hover .recent-work-list__hover {
       display: -webkit-box;
       display: -ms-flexbox;
       display: flex;
       opacity: 1;
       transition: opacity 0.3s ease-out; }
+      @media (max-width: 50rem) {
+        .page-work .recent-work-list__img-wrapper:hover .recent-work-list__hover {
+          display: none; } }
 
 .recent-work-list__hover {
   display: none;
